--- a/src/scss/shared/_vars.scss
+++ b/src/scss/shared/_vars.scss
@@ -1,9 +1,10 @@
 
 //Font-sizes
-$big-size: 3.2rem;
+$big-size: 1.8rem;
 $regular-size: 1.6rem;
-$medium-size: 1.5rem;
+$medium-size: 1.4rem;
 $small-size: 1.2rem;
+$small-title: 2rem;
 
 //Font weight
 $regular: 300;
