--- a/src/scss/shared/global.scss
+++ b/src/scss/shared/global.scss
@@ -31,6 +31,18 @@ a,
   }
 }
 
+h3 {
+  font-size: $small-title;
+  color: $primary;
+  margin: 1.6rem 0;
+}
+
+h4 {
+  font-size: $big-size;
+  color: $primary;
+  margin: 1rem 0;
+}
+
 p {
   margin: 0.4rem 0;
   line-height: initial;
@@ -64,12 +76,17 @@ select {
 
 .container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   flex-wrap: wrap;
 
   &.in {
     padding: 1.6rem;
+    width: 100%;
+    max-width: 97rem;
+  }
+  &-in {
+    padding: 1.6rem 0;
     width: 100%;
     max-width: 97rem;
   }
@@ -164,4 +181,73 @@ button {
   @include mobile(780px) {
     display: flex;
   }
+}
+
+.cards {
+  list-style-type: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+
+  & > li {
+    border: 0.1rem solid $border-grey;
+    border-radius: 0.4rem;
+    display: flex;
+    padding: 0.4rem;
+    margin: 0 1%;
+    width: 15%;
+    max-width: 15rem;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    & > span {
+      margin: 1rem 0;
+    }
+    & > a {
+      display: block;
+      width: 100%;
+      height: 100%;
+      text-decoration: none;
+      & > img {
+        display: block;
+        margin: 0 auto;
+        height: 100%;
+        width: 100%;
+        max-width: 15rem;
+        max-height: 18.3rem;
+      }
+      & > p {
+        margin: 0.8rem 0;
+        font-size: $medium-size;
+        color: #777777;
+      }
+      & > strong {
+        color: #777777;
+      }
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+    &:first-child {
+      margin-left: 0;
+    }
+    &:last-child {
+      margin-right: 0;
+    }
+    &.no-border {
+      border: none;
+    }
+  }
+}
+
+hr {
+  height: 1px;
+  background-color: #cccccc;
+  overflow: visible;
+  border: none;
+  width: 100%;
 }
